fixed the size of the circled image icons (they were slightly too big and sometimes overlapped the circle)

--- a/packages/ui/src/components/Visualization/Custom/Group/CustomGroup.scss
+++ b/packages/ui/src/components/Visualization/Custom/Group/CustomGroup.scss
@@ -45,8 +45,8 @@
       border-radius: 50px;
 
       img {
-        max-width: calc(var(--custom-group-TitleHeight) * 0.9);
-        max-height: calc(var(--custom-group-TitleHeight) * 0.9);
+        max-width: calc(var(--custom-group-TitleHeight) * 0.6);
+        max-height: calc(var(--custom-group-TitleHeight) * 0.6);
       }
     }
 
